--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <nav>
         <ul>
             <li><a href="index.html"class="active">Home</a></li>
-            <li><a href="pages/Basic_Info.html">Basic Info</a></li>
-            <li><a href="pages/Keeping_Axolotls.html">Keeping Axolotls</a></li>
-            <li><a href="pages/In_The_Wild.html">In The Wild</a></li>
-            <li><a href="pages/Gallery.html">Gallery</a></li>
-            <li><a href="pages/Contact_Us.html">Contact Us</a></li>
+            <li><a href="Pages/Basic_Info.html">Basic Info</a></li>
+            <li><a href="Pages/Keeping_Axolotls.html">Keeping Axolotls</a></li>
+            <li><a href="Pages/In_The_Wild.html">In The Wild</a></li>
+            <li><a href="Pages/Gallery.html">Gallery</a></li>
+            <li><a href="Pages/Contact_Us.html">Contact Us</a></li>
           </ul>
     </nav>
 <br>
