--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <img src="images/Banner.png" alt="Banner" style="width: 100%">
+    <img src="Images/Banner.png" alt="Banner" style="width: 100%">
     <nav>
         <ul>
             <li><a href="index.html"class="active">Home</a></li>
