--- a/Pages/Basic_Info.html
+++ b/Pages/Basic_Info.html
@@ -34,7 +34,7 @@
         </div>
         
         <div class="columnimage">
-            <img src="../images/wooper.jpg" style="width: 100%;">
+            <img src="../Images/wooper.jpg" style="width: 100%;">
         </div>
         
         </div>
