--- a/Pages/Contact_Us.html
+++ b/Pages/Contact_Us.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <img src="../images/Banner.png" alt="Banner" style="width: 100%">
+    <img src="../Images/Banner.png" alt="Banner" style="width: 100%">
     <nav>
         <ul>
             <li><a href="../index.html">Home</a></li>
