--- a/Pages/Keeping_Axolotls.html
+++ b/Pages/Keeping_Axolotls.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <img src="../images/Banner.png" alt="Banner" style="width: 100%">
+    <img src="../Images/Banner.png" alt="Banner" style="width: 100%">
     <nav>
         <ul>
             <li><a href="../index.html">Home</a></li>
@@ -38,7 +38,7 @@
     </div>
     
     <div class="columnimage">
-        <img src="../images/tank.jpg" style="width: 100%;">
+        <img src="../Images/tank.jpg" style="width: 100%;">
     </div>
     
     </div>
